    - removed insert_tag_check, no longer needed (Monte)
    - optimize cache fetches by scanning for insert tags only if they exist (Monte)
    - fixed bugs in overlib (Monte, Duncan Forrest)
    - fixed a problem with compile_id usage. (Andrei)
    - fixed problem with using assigned vars with {include_php ...} filepath.
      (Monte)

Version 1.5.2
-------------
    - added Smarty object as fifth argument for template resource functions.
      (Monte)
    - fixed a bug with incorrectly combined cache and compile id in
      clear_cache(). (Andrei)
    - fixed bug in smarty_make_timestamp introduced in PHP 4.1.0. (Monte)
    - fixed bug with cached insert debug timing. (Monte)
    - added 'script' attribute to {insert..} which specifies the script that
      the insert function can be found in. (Andrei)
    - added default template function handler. (Monte)

Version 1.5.1
-------------
    - removed error message from the generic _read_file() method, the caller
      should take care of that. (Andrei)
    - fixed a bug with incorrectly combined cache and compile id. (Andrei)

Version 1.5.0
-------------
    - added include_php built-in function, documented. (Monte)
    - added trusted_dir functionality, documented. (Monte)
    - consolidated secure_dir tests to one function. (Monte)
    - prepended _smarty_ to variable names in fetch() class function to avoid
      namespace conflicts. (Monte)
    - introduced $compile_id class variable that can be used to set persistent
      compile identifier across multiple display calls, documented. (Andrei)
    - fixed bug with concatenated null cache and compile identifiers. (Andrei)
    - added $smarty.section.* syntax for accessing section properties,
      documented. (Andrei)
    - added custom cache handling function ability, documented. (Monte)
    - added assign attribute to include, include_php, insert, fetch, math, and
      counter functions, documented. (Monte)